# Open-Sky-Planetarium

Open-Sky-Planetarium Plugin/: CMakeLists.txt  OSP  OSP.creator.user.ded1ca5  OSP.files  OSP.includes  README  README.md  styleSheetFile  xyz
Open-Sky-Planetarium Plugin/backup/LaserDev/: LaserDev_1.hpp
Open-Sky-Planetarium Plugin/builds/unix/: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake
Open-Sky-Planetarium Plugin/old_files/Coords/: Coords.hpp
Open-Sky-Planetarium Plugin/old_files/LaserDev/: LaserDev.hpp  LaserDev_1.cpp
Open-Sky-Planetarium Plugin/plaser_new/: AxesLib.cpp  plaser_new.ino
Open-Sky-Planetarium Plugin/src/: CMakeLists.txt  Calibrate.cpp  Doxyfile  LaserDev.cpp  LaserDev.hpp  OpenSkyPlanetarium.cpp  OpenSkyPlanetarium.hpp~  SerialCom.cpp  SerialCom.hpp  SerialCom.hpp~
Open-Sky-Planetarium Plugin/src/DevDoc/: _calibrate_8hpp_source.html  _laser_dev_8hpp.html  _o_s_p_main_dialog_8cpp.html  _o_s_p_main_dialog_8cpp_source.html  _o_s_p_main_dialog_8hpp.html  _o_s_p_main_dialog_8hpp_source.html  _open_sky_planetarium_8cpp.html  _serial_com_8cpp.html  annotated.html  class_calibrate.html  class_calibrate.js  class_laser_dev.html  class_o_s_p_main_dialog-members.html  class_o_s_p_main_dialog.html  class_open_sky_planetarium.html  class_open_sky_planetarium.js  class_open_sky_planetarium_plugin_interface-members.html  classes.html  functions_func.html  hierarchy.html  index.html
Open-Sky-Planetarium Plugin/src/gui/: OSPMainDialog.cpp  OSPMainDialog.hpp  OSPMainDialog.ui
Open-Sky-Planetarium Plugin/src/html/: _calibrate_8cpp.html  _calibrate_8cpp_source.html  _laser_dev_8cpp.html  _laser_dev_8cpp_source.html  _laser_dev_8hpp_source.html  _o_s_p_main_dialog_01_07copy_08_8cpp_source.html  _open_sky_planetarium_8cpp_source.html  _open_sky_planetarium_8hpp_source.html  _serial_com_8hpp.html  _serial_com_8hpp_source.html  class_laser_dev.js  class_o_s_p_main_dialog.js  class_open_sky_planetarium_plugin_interface.html  class_serial_com.html  class_serial_com.js  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  files.js  functions.html  navtreeindex0.js
Open-Sky-Planetarium Plugin/src/latex/: _calibrate_8hpp.tex  _laser_dev_8hpp.tex  _o_s_p_main_dialog_01_07copy_08_8cpp.tex  _o_s_p_main_dialog_8cpp.tex  _o_s_p_main_dialog_8hpp.tex  _open_sky_planetarium_8cpp.tex  refman.tex  (+11 more)
(+104 files in other folders)
